--- a/pipes.opam
+++ b/pipes.opam
@@ -8,7 +8,7 @@ bug-reports: "https://github.com/pveber/pipes/issues"
 license: "GPL3"
 dev-repo: "https://github.com/pveber/pipes.git"
 
-build: ["jbuilder" "build" "-p" name "-j" jobs]
+build: ["dune" "build" "-p" name "-j" jobs]
 
 depends: [
   "ocamlfind" {build}
